Update to as 11.0.0

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src-gen/ch/actifsource/example/ant/template=UTF-8
 encoding//src-gen/ch/actifsource/example/ant/unittest/generic=UTF-8
 encoding//src-gen/ch/actifsource/example/ant/unittest/generic/javamodel=UTF-8
 encoding//src-gen/ch/actifsource/example/ant/unittest/specific=UTF-8
